@@ -1,2 +1,3 @@
-.build
-Dist-Zilla-Plugin-Author-KENTNL-Prereqs-Latest-Selective-*
+/.build
+/Dist-Zilla-Plugin-Author-KENTNL-Prereqs-Latest-Selective-*
+/tmp/
