@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 1.4.1 at Wed Jul  4 18:37:34 2012
+; vim: syntax=dosini
 name             = Dist-Zilla-Plugin-Author-KENTNL-Prereqs-Latest-Selective
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
@@ -9,7 +10,7 @@ copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
 [@Author::KENTNL]
 :version          = 2.020
-twitter_hash_tags = #perl #cpan
+twitter_extra_hash_tags = #distzilla
 normal_form       = numify
 mantissa          = 6
 bumpversions      = 1
