@@ -1,6 +1,15 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.001001
+ [Added / runtime recommends]
+ - Moose 2.000
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001003 → 0.99
 
 1.001000 2014-08-30T12:52:09Z
 
@@ -18,4 +27,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
 0.1.2 2013-11-20T03:06:09Z
 
 0.1.1 2013-11-18T12:20:20Z
-
